<resources>
    <string name="app_name">Merp</string>

    <!--autogenerated activity titles-->
    <string name="title_activity_main">Home</string>
    <string name="title_activity_earnings">Earnings</string>
    <string name="title_activity_edit_earning">Edit Earning</string>
    <string name="title_activity_expenses">Expenses</string>
    <string name="title_activity_edit_expense">Edit Expense</string>
    <string name="title_activity_view_reports">%1$s to %2$s</string>
    <string name="title_activity_earnings_sources">Earnings Sources</string>
    <string name="title_activity_expenses_sources">Expenses Sources</string>
    <string name="title_activity_date_picker">Choose start and end date</string>
    <string name="title_activity_help">Help</string>

    <!-- activity_main -->
    <string name="text_edit_earnings">Edit Earnings</string>
    <string name="text_edit_expenses">Edit Expenses</string>
    <string name="text_view_reports">View Reports</string>

    <!--EarningsActivity-->
    <string name="text_delete_all_earnings">Delete all earnings?</string>

    <!--ExpensesActivity-->
    <string name="text_delete_all_expenses">Delete all expenses?</string>

    <!-- fragment_edit_entry -->
    <string name="text_source">Source</string>
    <string name="btn_edit_sources">+</string>
    <string name="text_amount_earned">Amount Earned</string>
    <string name="text_amount_spent">Amount Spent</string>
    <string name="text_dollar_sign">$</string>
    <string name="hint_enter_amount">0.00</string>
    <string name="text_additional_info">Additional Information</string>
    <string name="hint_enter_new_source">Enter new source</string>
    <string name="btn_add_source">Add</string>
    <string name="title_activity_settings">Settings</string>

    <!--universal (menu)-->
    <string name="action_display_help">Help</string>

    <!--menu_earnings-->
    <string name="action_delete_earnings">Delete all earnings</string>

    <!--menu_expenses-->
    <string name="action_delete_expenses">Delete all expenses</string>

    <!--content_view_reports-->
    <string name="text_analysis">
        Net income: %1$s\n
        \tTotal gained: %2$s\n
        \tTotal lost: %3$s\n
        \tAverage profit per day: %4$s
    </string>

    <!--fragment_entries-->
    <string name="hint_search_for_keyword">Search for keyword</string>
    <string name="label_date">Date</string>
    <string name="label_amount">Amount</string>
    <string name="label_additional_info">Info</string>

    <!--fragment_sources-->
    <string name="hint_sources">Add/Search sources</string>
    <string name="text_delete">Delete</string>

    <!--content_date_picker-->
    <string name="text_start_date">Start Date</string>
    <string name="text_end_date">End Date</string>
    <string name="btn_create_report">Create Report</string>
    <string name="btn_select_today">Select today</string>
    <string name="btn_select_all">Select all</string>
    <string name="btn_generate_report">Generate report</string>

    <!--fragment_help-->
    <string name="help_earnings_activity">
        <b>EARNINGS</b>\n
        \n
        <b>Search bar</b>\n
        Filters the list for all earnings that contain the given keyword(s).\n
        \n
        Separate multiple keywords with \",\" to search for all earnings that contain all given keywords.\n
        \n
        <b>List of earnings</b>\n
        Displays all (or filtered) earnings.\n
        \n
        Tap an earning to edit it.\n
        Tap and hold an earning to delete it.\n
        \n
        <b>\"+\" button</b>\n
        Tap this button to add a new earning.
    </string>

    <string name="help_edit_earnings_activity">
        <b>EDIT EARNING</b>\n
        \n
        <b>Date Picker widget</b>\n
        Use the widget to select a date.\n
        You can tap the day/month/year to manually enter a value.\n
        \n
        <b>Source</b>\n
        Dropdown menu: select the source of the earning.\n
        \"+\" button: add/delete sources.\n
        \n
        <b>Amount earned</b>\n
        Enter the amount earned (maximum 2 decimal places).\n
        \n
        <b>Additional information</b>\n
        Additional information can be entered here (not required).\n
        \n
        <b>Save button</b>\n
        Tap this button to save.
    </string>

    <string name="help_earnings_sources_activity">
        <b>EARNINGS SOURCES</b>\n
        \n
        <b>Search bar</b>\n
        Filters the list for all sources of earnings that contain the given text.\n
        Doubles as the field for entering the name of a new source.\n
        \n
        <b>\"ADD\" button</b>\n
        Adds the contents of the search bar as a new source.\n
        \n
        <b>List of sources</b>\n
        Displays all (or filtered) sources of earnings.
    </string>

    <string name="help_expenses_activity">
        <b>EXPENSES</b>\n
        \n
        <b>Search bar</b>\n
        Filters the list for all expenses that contain the given keyword(s).\n
        \n
        Separate multiple keywords with \",\" to search for all expenses that contain all given keywords.\n
        \n
        <b>List of expenses</b>\n
        Displays all (or filtered) expenses.\n
        \n
        Tap an expense to edit it.\n
        Tap and hold an expense to delete it.\n
        \n
        <b>\"+\" button</b>\n
        Tap this button to add a new expense.
    </string>

    <string name="help_edit_expense_activity">
        <b>EDIT EXPENSE</b>\n
        \n
        <b>Date Picker widget</b>\n
        Use the widget to select a date.\n
        You can tap the day/month/year to manually enter a value.\n
        \n
        <b>Source</b>\n
        Dropdown menu: select the source of the expense.\n
        \"+\" button: add/delete sources.\n
        \n
        <b>Amount earned</b>\n
        Enter the amount spent (maximum 2 decimal places).\n
        \n
        <b>Additional information</b>\n
        Additional information can be entered here (not required).\n
        \n
        <b>Save button</b>\n
        Tap this button to save.
    </string>

    <string name="help_expenses_sources_activity">
        <b>EXPENSES SOURCES</b>\n
        \n
        <b>Search bar</b>\n
        Filters the list for all sources of expenses that contain the given text.\n
        Doubles as the field for entering the name of a new source.\n
        \n
        <b>\"ADD\" button</b>\n
        Adds the contents of the search bar as a new source.\n
        \n
        <b>List of sources</b>\n
        Displays all (or filtered) sources of expenses.
    </string>

    <string name="help_date_picker_activity">
        <b>DATE SELECTION</b>\n
        \n
        <b>Calendar widgets</b>\n
        Use the corresponding calendar widgets to select the start and end dates for which
        the report will detail.\n
        \n
        <b>\"SELECT TODAY\" button</b>\n
        Sets both calendar widgets to the current date.\n
        \n
        <b>\"SELECT ALL\" button</b>\n
        Sets the start date calendar to the oldest possible date (1900, Jan. 01).\n
        Sets the end date calendar to the latest possible date (2100, Dec. 31).\n
        WARNING: this will often cause the \"Average profit per day\" text to display \$0.00 due
        to the large date range.\n
        \n
        <b>\"GENERATE REPORT\" button</b>\n
        Generates and displays a report of all entries between the two specified dates.
    </string>

    <string name="help_view_reports_activity">
        <b>VIEW REPORTS</b>\n
        \n
        <b>Title</b>\n
        Displays the start and end dates for the report chosen in the date selection screen.\n
        \n
        <b>Graphs and charts</b>\n
        Bar graphs display the total amount earned/spent for each date with a recorded entry
        within the chosen date range.\n
        Pie charts display the total amount earned/spent for each source of earning/expense with a recorded entry
        within the chosen date range. The size of each section of the chart is proportional to the
        contribution of that source towards the total amount earned/spent.\n
        Switch between bar graphs and pie charts for earnings and expenses by tapping the corresponding tab.\n
        \n
        <b>Analysis</b>\n
        Analysis text such as the net income will be displayed.\n
        Scroll down to view additional analysis text (CURRENTLY NOT ENOUGH ADDITIONAL INFO TO ALLOW SCROLLING).
    </string>

</resources>
