<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.SourcesFragment">

    <LinearLayout
        android:id="@+id/layoutDeleteSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#AAAAAA"
        android:elevation="20dp"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/textConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@android:string/cancel"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnDeleteSource"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FF0000"
                android:text="@string/text_delete"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/enterNewSource"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/hint_sources"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnAddSource"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_add_source" />
    </LinearLayout>

    <ListView
        android:id="@+id/listSources"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/border_black"
        android:longClickable="true" />

    </LinearLayout>

</FrameLayout>